# pyBotEel

./: .gitignore  .pypirc  README.md  main.py  pyproject.toml  route.py
src/: main.py  settings.py
src/boteel/: __init__.py  __main__.py
src/boteel/conf/: context.py  functions.py  global_settings.py  routes.py
src/boteel/core/: boteel.py  context_processors.py  forms.py  template.py
src/boteel/core/middleware/: htmx.py  messages.py
src/boteel/core/myeel/: __init__.py  browsers.py
src/boteel/core/utils/: decorators.py  filehandler.py  module_loading.py
src/boteel/database/: __init__.py  adaptors.py
src/boteel/default/: urls.py  views.py
src/boteel/default/static/default/scripts/: main.js
src/boteel/default/static/default/styles/: style.css
src/boteel/default/templates/default/: base.html  index.html  navbar.html
web/css/: main.css
web/js/: app.js
web/templates/: about.html  base.html  index.html  new.html
