[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boteel"
version = "0.0.1"
authors = [
  { name="Ajeesh A S", email="ajeeshas1992@gmail.com" },
]
description = "A bottle and eel based framework for building desktop applications"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ajeeshas41/pyBotEel"
Issues = "https://github.com/Ajeeshas41/pyBotEel/issues"